--- a/index.html
+++ b/index.html
@@ -16,18 +16,29 @@
 
 <body>
 	<div class="lft">
-<!--		<div class="circle"><div class="incircle blue"></div></div> -->
 
-		<div style="text-align: center;">
-			<i class="fas fa-arrow-circle-right" style="font-size: 150px;"></i>
+		<div class="circle">
+			<div class="incircle">
+			</div>
 		</div>
-		<div class="namehere">NAME HERE</div>
-		<h1 class="surname">SURNAME</h1>
-		<div class="graphic-designer">GRAPHIC DESIGNER</div>
+
+<!--		<div style="text-align: center;">
+			<i class="fas fa-arrow-circle-right"
+				 style="font-size: 233px;color: greenyellow;"></i>
+		</div> -->
+		<div class="namehere" style="margin-top: 30px;line-height: 52px;">NAME HERE</div>
+		<h1 class="surname" style="margin-top: -10px;">SURNAME</h1>
+		<div class="graphic-designer" style="margin-top: -5px;">GRAPHIC DESIGNER</div>
 
 <!--		<div class="circle middle"><div class="incircle blue middle">pic</div></div> -->
-		<h2 class="hdr"><i class="fas fa-arrow-circle-right"></i>PROFILE <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h2>
-		<div class="txt">
+		<h2 class="hdr" style="margin-top: 74px;margin-left: -10px;margin-bottom: 5px;">
+			<i class="fas fa-arrow-circle-right" style="font-size: 73px;"></i>
+			PROFILE
+			<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				&nbsp;&nbsp;
+			</span>
+		</h2>
+<div class="txt" style="margin-top: ">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 		Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
 		magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
@@ -43,23 +54,85 @@
 		</span>
 		</div>
 
-		<h2 class="hdr"><i class="fas fa-arrow-circle-right"></i>CONTACT <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h2>
+		<h2 class="hdr">
+			<i class="fas fa-arrow-circle-right"></i>
+			CONTACT
+			<span>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			</span>
+		</h2>
 		<h3>ADDRESS Main Street, City.</h3>
 		<h3>E-MAIL contact@domain.com</h3>
 		<h3>PHONE 555-555-555</h3>
 		<h3>WEBSITE www.yourweb.com</h3>
 
-		<h1 class="hdr"><i class="fas fa-arrow-circle-right"></i>SKILLS  <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h1>
+		<h1 class="hdr">
+			<i class="fas fa-arrow-circle-right"></i>
+			SKILLS
+			<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			</span>
+		</h1>
 		<h2>CREATIVE</h2>
-		<h2>***********</h2>
+		<h2>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+		</h2>
 		<h2>TEAMWORK</h2>
-		<h2>***********</h2>
+		<h2>
+					<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+		</h2>
 		<h2>INNOVATE</h2>
-		<h2>***********</h2>
+		<h2>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+		</h2>
 		<h2>COMMUNICATION</h2>
-		<h2>***********</h2>
+		<h2>
+					<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+</h2>
 	</div>
 
 
@@ -70,10 +143,16 @@
 
   <div class="lft" style="width:650px;border:1px dotted green;">
 
-		<h2 class="hdr"><i class="fas fa-arrow-circle-right"></i>EDUCATION--------</h2>
+		<h2 class="hdr">
+			<i class="fas fa-arrow-circle-right" style="font-size: 78px;"></i>
+			EDUCATION--------
+		</h2>
 <!--		<div class="circle small"><div class="incircle blue middle"></div></div> -->
 
-		<p><i class="fas fa-arrow-circle-right"></i>MASTER DEGREE// Feb 2011 - Jun 2014</p>
+		<p>
+			<i class="fas fa-arrow-circle-right" style="font-size: 20px;">
+			</i>MASTER DEGREE// Feb 2011 - Jun 2014
+		</p>
 		<p>UNIVERSITY NAME</p>
 		<p class="txt">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -82,7 +161,10 @@
 		ultricies nec, pellentesque.
 		</p>
 
-		<p><i class="fas fa-arrow-circle-right"></i>MASTER DEGREE// Feb 2011 - Jun 2014</p>
+		<p>
+			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			MASTER DEGREE// Feb 2011 - Jun 2014
+		</p>
 		<p>UNIVERSITY NAME</p>
 		<p class="txt">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -91,7 +173,10 @@
 		ultricies nec, pellentesque.
 		</p>
 
-		<p><i class="fas fa-arrow-circle-right"></i>MASTER DEGREE// Feb 2011 - Jun 2014</p>
+		<p>
+			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			MASTER DEGREE// Feb 2011 - Jun 2014
+		</p>
 		<p>UNIVERSITY NAME</p>
 		<p class="txt">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -100,7 +185,10 @@
 		ultricies nec, pellentesque.
 		</p>
 
-		<p><i class="fas fa-arrow-circle-right"></i>MASTER DEGREE// Feb 2011 - Jun 2014</p>
+		<p>
+			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			MASTER DEGREE// Feb 2011 - Jun 2014
+		</p>
 		<p>UNIVERSITY NAME</p>
 		<p class="txt">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -110,8 +198,14 @@
 		</p>
 
 <!--		<div class="circle middle"><div class="incircle blue middle">pic</div></div> -->
-		<h2 class="hdr"><i class="fas fa-arrow-circle-right"></i>EXPERIENCE--------</h2>
-		<p><i class="fas fa-arrow-circle-right"></i>COMPANY NAME// Feb 2011 - Jun 2014</p>
+		<h2 class="hdr">
+			<i class="fas fa-arrow-circle-right" style="font-size: 78px;"></i>
+			EXPERIENCE--------
+		</h2>
+		<p>
+			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			COMPANY NAME// Feb 2011 - Jun 2014
+		</p>
 		<p>YOUR JOB HERE</p>
 		<p class="txt">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -120,7 +214,10 @@
 		ultricies nec, pellentesque.
 		</p>
 
-		<p><i class="fas fa-arrow-circle-right"></i>COMPANY NAME// Feb 2011 - Jun 2014</p>
+		<p>
+			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			COMPANY NAME// Feb 2011 - Jun 2014
+		</p>
 		<p>YOUR JOB HERE</p>
 		<p class="txt">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -129,7 +226,10 @@
 		ultricies nec, pellentesque.
 		</p>
 
-		<p><i class="fas fa-arrow-circle-right"></i>COMPANY NAME// Feb 2011 - Jun 2014</p>
+		<p>
+			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			COMPANY NAME// Feb 2011 - Jun 2014
+		</p>
 		<p>YOUR JOB HERE</p>
 		<p class="txt">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -138,7 +238,10 @@
 		ultricies nec, pellentesque.
 		</p>
 
-		<h2 class="hdr"><i class="fas fa-arrow-circle-right"></i>SOFTWARE--------</h2>
+		<h2 class="hdr">
+			<i class="fas fa-arrow-circle-right" style="font-size: 78px;"></i>
+			SOFTWARE--------
+		</h2>
 		<div>
 
 			<div style="float: left;">
