Левая колонка в 0-ом приближении

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>FullStack Development</title>
 	<meta name="keywords" content="FullStack Development">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
+<link href="css/normalize.css" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
 	crossorigin="anonymous"> <!--  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" -->
@@ -15,30 +16,30 @@
 
 
 <body>
-	<div class="lft">
+<div class="lft">
 
 		<div class="circle">
 			<div class="incircle">
 			</div>
 		</div>
-
-<!--		<div style="text-align: center;">
-			<i class="fas fa-arrow-circle-right"
-				 style="font-size: 233px;color: greenyellow;"></i>
-		</div> -->
-		<div class="namehere" style="margin-top: 30px;line-height: 52px;">NAME HERE</div>
-		<h1 class="surname" style="margin-top: -10px;">SURNAME</h1>
-		<div class="graphic-designer" style="margin-top: -5px;">GRAPHIC DESIGNER</div>
+<!--<div style="text-align: center;"><i class="fas fa-arrow-circle-right"
+			style="font-size: 233px;color: greenyellow;"></i></div> -->
+		<div class="namehere">NAME HERE</div>
+		<div class="surname">SURNAME</div>
+		<div class="graphic-designer">GRAPHIC DESIGNER</div>
 
 <!--		<div class="circle middle"><div class="incircle blue middle">pic</div></div> -->
-		<h2 class="hdr" style="margin-top: 74px;margin-left: -10px;margin-bottom: 5px;">
-			<i class="fas fa-arrow-circle-right" style="font-size: 73px;"></i>
-			PROFILE
-			<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				&nbsp;&nbsp;
-			</span>
-		</h2>
-<div class="txt" style="margin-top: ">
+
+		<div class="hdr">
+			<i class="fas fa-arrow-circle-right"></i>
+			<span>PROFILE</span>
+			<div style="display: table-cell;vertical-align: middle;
+					 width: inherit;padding-left: 8px;padding-right: 15px;">
+				<div style="height: 6px;width: 100%;background-color: red;"></div>
+			</div>
+
+		</div>
+<div class="txt" style="margin-top: 10px; float: bottom; ">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 		Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
 		magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
@@ -54,86 +55,117 @@
 		</span>
 		</div>
 
-		<h2 class="hdr">
+		<div class="hdr" style="margin-top: 45px;">
 			<i class="fas fa-arrow-circle-right"></i>
-			CONTACT
-			<span>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<span style="letter-spacing: -2px;">
+				CONTACT
 			</span>
-		</h2>
-		<h3>ADDRESS Main Street, City.</h3>
-		<h3>E-MAIL contact@domain.com</h3>
-		<h3>PHONE 555-555-555</h3>
-		<h3>WEBSITE www.yourweb.com</h3>
+			<div style="display: table-cell;vertical-align: middle;
+					 width: inherit;padding-left: 8px;padding-right: 15px;">
+				<div style="height: 6px;width: 100%;background-color: red;">
+				</div>
+			</div>
+		</div>
+	<h3>
+		<span style="width: 29%;display: inline-block;">
+			ADDRESS
+		</span>
+		<span style="font-weight: 400;letter-spacing: -1px;">Main Street, City.</span>
+	</h3>
+		<h3>
+			<span style="width: 29%;display: inline-block;">E-MAIL</span>
+			<span style="font-weight: 400;letter-spacing: -1px;">contact@domain.com</span>
+		</h3>
+		<h3>
+			<span style="width: 29%;display: inline-block;">PHONE</span>
+			<span style="font-weight: 400;letter-spacing: -1px;">555-555-555</span>
+		</h3>
+		<h3>
+			<span style="width: 29%;display: inline-block;">WEBSITE</span>
+			<span style="font-weight: 400;letter-spacing: -1px;">www.yourweb.com</span>
+		</h3>
 
-		<h1 class="hdr">
+		<div class="hdr" style="margin-top: 44px;">
 			<i class="fas fa-arrow-circle-right"></i>
-			SKILLS
-			<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<span style="letter-spacing: -1px;">
+				SKILLS
 			</span>
-		</h1>
-		<h2>CREATIVE</h2>
-		<h2>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+			<div style="display: table-cell;vertical-align: middle;
+					 width: inherit;padding-left: 8px;padding-right: 15px;">
+				<div style="height: 6px;width: 100%;background-color: red;"></div>
+			</div>
+		</div>
+<div style="text-align: center;padding-right: 15px;padding-left: 0px;">
+	<h2 style="letter-spacing: 0.8px;margin-bottom: 10px;">
+		CREATIVE
+	</h2>
+	<div style="margin-top: 10px;">
+			<i class="fas fa-arrow-circle-right" style="margin-right: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin-left: 3px;font-size: 18px;"></i>
+		</div>
+		<h2 style="letter-spacing: 0.8px;margin-bottom: 8px;margin-top: 16px;">
+			TEAMWORK
 		</h2>
-		<h2>TEAMWORK</h2>
-		<h2>
-					<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+		<div style="margin-top: 8px;">
+			<i class="fas fa-arrow-circle-right" style="margin-right: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin-left: 3px;font-size: 18px;"></i>
+		</div>
+		<h2 style="letter-spacing: 0.8px;margin-bottom: 8px;margin-top: 16px;">
+			INNOVATE
 		</h2>
-		<h2>INNOVATE</h2>
-		<h2>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
+		<div style="margin-top: 8px;">
+			<i class="fas fa-arrow-circle-right" style="margin-right: 3px;font-size: 18px;margin: 8px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin-left: 3px;font-size: 18px;"></i>
+		</div>
+		<h2 style="letter-spacing: 0.8px;margin-bottom: 8px;margin-top: 10px;">
+			COMMUNICATION
 		</h2>
-		<h2>COMMUNICATION</h2>
-		<h2>
-					<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="font-size: 18px;"></i>
-</h2>
-	</div>
+		<div style="margin-top: 8px;">
+			<i class="fas fa-arrow-circle-right" style="margin-right: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
+			<i class="fas fa-arrow-circle-right" style="margin-left: 3px;font-size: 18px;"></i>
+		</div>
+</div>
+</div>
 
 
 
@@ -141,9 +173,19 @@
 
 
 
-  <div class="lft" style="width:650px;border:1px dotted green;">
+<div class="lft" style="width:650px;border:1px dotted green;">
 
-		<h2 class="hdr">
+		<div class="hdr" style="margin-top: 0px;">
+			<i class="fas fa-arrow-circle-right"></i>
+			<span style="letter-spacing: -1px;">
+				EDUCATION
+			</span>
+			<div style="display: table-cell;vertical-align: middle;
+					 width: inherit;padding-left: 8px;padding-right: 15px;">
+				<div style="height: 6px;width: 100%;background-color: red;"></div>
+			</div>
+		</div>
+<!--		<h2 class="hdr">
 			<i class="fas fa-arrow-circle-right" style="font-size: 78px;"></i>
 			EDUCATION--------
 		</h2>
@@ -197,11 +239,21 @@
 		ultricies nec, pellentesque.
 		</p>
 
-<!--		<div class="circle middle"><div class="incircle blue middle">pic</div></div> -->
+<!--		<div class="circle middle"><div class="incircle blue middle">pic</div></div>
 		<h2 class="hdr">
 			<i class="fas fa-arrow-circle-right" style="font-size: 78px;"></i>
 			EXPERIENCE--------
-		</h2>
+		</h2>-->
+		<div class="hdr" style="margin-top: 0px;">
+			<i class="fas fa-arrow-circle-right"></i>
+			<span style="letter-spacing: -1px;">
+				EXPERIENCE
+			</span>
+			<div style="display: table-cell;vertical-align: middle;
+					 width: inherit;padding-left: 8px;padding-right: 15px;">
+				<div style="height: 6px;width: 100%;background-color: red;"></div>
+			</div>
+		</div>
 		<p>
 			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
 			COMPANY NAME// Feb 2011 - Jun 2014
@@ -238,11 +290,22 @@
 		ultricies nec, pellentesque.
 		</p>
 
-		<h2 class="hdr">
+<!--		<h2 class="hdr">
 			<i class="fas fa-arrow-circle-right" style="font-size: 78px;"></i>
 			SOFTWARE--------
 		</h2>
-		<div>
+-->
+		<div class="hdr" style="margin-top: 0px;">
+			<i class="fas fa-arrow-circle-right"></i>
+			<span style="letter-spacing: -1px;">
+				SOFTWARE
+			</span>
+			<div style="display: table-cell;vertical-align: middle;
+					 width: inherit;padding-left: 8px;padding-right: 15px;">
+				<div style="height: 6px;width: 100%;background-color: red;"></div>
+			</div>
+		</div>
+<div>
 
 			<div style="float: left;">
 				<h2>PHOTOSHOP</h2>
@@ -262,7 +325,7 @@
 				<h2>=========</h2>
 			</div>
 		</div>
-	</div>
+</div>
 
 </body>
 </html>
