Правая колонка в 0-ом приближении

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 
 
-<div class="lft" style="width:650px;border:1px dotted green;">
+<div class="lft" style="width:650px;border:0px dotted green;margin-top: -3px;">
 
 		<div class="hdr" style="margin-top: 0px;">
 			<i class="fas fa-arrow-circle-right"></i>
@@ -185,68 +185,87 @@
 				<div style="height: 6px;width: 100%;background-color: red;"></div>
 			</div>
 		</div>
-<!--		<h2 class="hdr">
-			<i class="fas fa-arrow-circle-right" style="font-size: 78px;"></i>
-			EDUCATION--------
-		</h2>
-<!--		<div class="circle small"><div class="incircle blue middle"></div></div> -->
 
-		<p>
-			<i class="fas fa-arrow-circle-right" style="font-size: 20px;">
-			</i>MASTER DEGREE// Feb 2011 - Jun 2014
-		</p>
-		<p>UNIVERSITY NAME</p>
-		<p class="txt">
-		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-		Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-		magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-		ultricies nec, pellentesque.
-		</p>
 
-		<p>
+		<h3 style="margin-left: 11px;margin-top: 25px;margin-bottom: 8px;
+				font-size: 23px;">
 			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
-			MASTER DEGREE// Feb 2011 - Jun 2014
-		</p>
-		<p>UNIVERSITY NAME</p>
-		<p class="txt">
+			<span style="width: 31%;display: inline-block;margin-left: 18px;
+						font-weight: bold; letter-spacing: 2.5px;">MASTER DEGREE
+			</span>
+			<span style="letter-spacing: 1.5px;">// Feb 2011 - Jun 2014</span>
+		</h3>
+		<h3 style="margin-left: 50px;margin-top: 5px;letter-spacing: 2px;margin-bottom: 10px;">
+			UNIVERSITY NAME
+		</h3>
+		<p class="txt" style="margin-left: 52px;margin-top: 10px;margin-bottom: 10px;">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 		Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
 		magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
 		ultricies nec, pellentesque.
 		</p>
 
-		<p>
+		<h3 style="margin-left: 11px;margin-top: 15px;margin-bottom: 8px;
+				font-size: 23px;">
 			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
-			MASTER DEGREE// Feb 2011 - Jun 2014
-		</p>
-		<p>UNIVERSITY NAME</p>
-		<p class="txt">
+			<span style="width: 31%;display: inline-block;margin-left: 18px;
+						font-weight: bold; letter-spacing: 2.5px;">MASTER DEGREE
+			</span>
+			<span style="letter-spacing: 1.5px;">// Feb 2011 - Jun 2014</span>
+		</h3>
+		<h3 style="margin-left: 50px;margin-top: 5px;letter-spacing: 2px;margin-bottom: 10px;">
+			UNIVERSITY NAME
+		</h3>
+		<p class="txt" style="margin-left: 52px;margin-top: 10px;margin-bottom: 10px;">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 		Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
 		magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
 		ultricies nec, pellentesque.
 		</p>
 
-		<p>
+		<h3 style="margin-left: 11px;margin-top: 15px;margin-bottom: 8px;
+				font-size: 23px;">
 			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
-			MASTER DEGREE// Feb 2011 - Jun 2014
-		</p>
-		<p>UNIVERSITY NAME</p>
-		<p class="txt">
+			<span style="width: 31%;display: inline-block;margin-left: 18px;
+						font-weight: bold; letter-spacing: 2.5px;">MASTER DEGREE
+			</span>
+			<span style="letter-spacing: 1.5px;">// Feb 2011 - Jun 2014</span>
+		</h3>
+		<h3 style="margin-left: 50px;margin-top: 5px;letter-spacing: 2px;margin-bottom: 10px;">
+			UNIVERSITY NAME
+		</h3>
+		<p class="txt" style="margin-left: 52px;margin-top: 10px;margin-bottom: 10px;">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 		Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
 		magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
 		ultricies nec, pellentesque.
 		</p>
 
-<!--		<div class="circle middle"><div class="incircle blue middle">pic</div></div>
-		<h2 class="hdr">
-			<i class="fas fa-arrow-circle-right" style="font-size: 78px;"></i>
-			EXPERIENCE--------
-		</h2>-->
-		<div class="hdr" style="margin-top: 0px;">
+		<h3 style="margin-left: 11px;margin-top: 15px;margin-bottom: 8px;
+				font-size: 23px;">
+			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			<span style="width: 31%;display: inline-block;margin-left: 18px;
+						font-weight: bold; letter-spacing: 2.5px;">
+				MASTER DEGREE
+			</span>
+			<span style="letter-spacing: 1.5px;">
+				// Feb 2011 - Jun 2014
+			</span>
+		</h3>
+		<h3 style="margin-left: 50px;margin-top: 5px;letter-spacing: 2px;margin-bottom: 10px;">
+			UNIVERSITY NAME
+		</h3>
+		<p class="txt" style="margin-left: 52px;margin-top: 10px;margin-bottom: 10px;">
+		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+		Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
+		magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+		ultricies nec, pellentesque.
+		</p>
+
+
+		<div class="hdr" style="margin-top: 50px;margin-bottom: 40px;">
 			<i class="fas fa-arrow-circle-right"></i>
-			<span style="letter-spacing: -1px;">
+			<span style="letter-spacing: -1px;padding-left: 20px;">
 				EXPERIENCE
 			</span>
 			<div style="display: table-cell;vertical-align: middle;
@@ -254,50 +273,69 @@
 				<div style="height: 6px;width: 100%;background-color: red;"></div>
 			</div>
 		</div>
-		<p>
+		<h3 style="margin-left: 10px;margin-top: 15px;margin-bottom: 8px;">
 			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
-			COMPANY NAME// Feb 2011 - Jun 2014
-		</p>
-		<p>YOUR JOB HERE</p>
-		<p class="txt">
+			<span style="width: 31%;display: inline-block;margin-left: 18px;
+						font-weight: bold; letter-spacing: 2.5px;">
+				COMPANY NAME
+			</span>
+			<span style="letter-spacing: 1.5px;">
+				// Feb 2011 - Jun 2014
+			</span>
+		</h3>
+		<h3 style="margin-left: 50px;margin-top: 5px;letter-spacing: 2px;margin-bottom: 10px;">
+			YOUR JOB HERE
+		</h3>
+		<p class="txt" style="margin-left: 52px;margin-top: 10px;margin-bottom: 10px;">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 		Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
 		magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
 		ultricies nec, pellentesque.
 		</p>
 
-		<p>
+		<h3 style="margin-left: 10px;margin-top: 15px;margin-bottom: 8px;">
 			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
-			COMPANY NAME// Feb 2011 - Jun 2014
-		</p>
-		<p>YOUR JOB HERE</p>
-		<p class="txt">
+			<span style="width: 31%;display: inline-block;margin-left: 18px;
+						font-weight: bold; letter-spacing: 2.5px;">
+				COMPANY NAME
+			</span>
+			<span style="letter-spacing: 1.5px;">
+				// Feb 2011 - Jun 2014
+			</span>
+		</h3>
+		<h3 style="margin-left: 50px;margin-top: 5px;letter-spacing: 2px;margin-bottom: 10px;">
+			YOUR JOB HERE
+		</h3>
+		<p class="txt" style="margin-left: 52px;margin-top: 10px;margin-bottom: 10px;">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 		Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
 		magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
 		ultricies nec, pellentesque.
 		</p>
 
-		<p>
+		<h3 style="margin-left: 10px;margin-top: 15px;margin-bottom: 8px;">
 			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
-			COMPANY NAME// Feb 2011 - Jun 2014
-		</p>
-		<p>YOUR JOB HERE</p>
-		<p class="txt">
+			<span style="width: 31%;display: inline-block;margin-left: 18px;
+						font-weight: bold; letter-spacing: 2.5px;">
+				COMPANY NAME
+			</span>
+			<span style="letter-spacing: 1.5px;">
+				// Feb 2011 - Jun 2014
+			</span>
+		</h3>
+		<h3 style="margin-left: 50px;margin-top: 5px;letter-spacing: 2px;margin-bottom: 10px;">
+			YOUR JOB HERE
+		</h3>
+		<p class="txt" style="margin-left: 52px;margin-top: 10px;margin-bottom: 10px;">
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 		Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
 		magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
 		ultricies nec, pellentesque.
 		</p>
 
-<!--		<h2 class="hdr">
-			<i class="fas fa-arrow-circle-right" style="font-size: 78px;"></i>
-			SOFTWARE--------
-		</h2>
--->
-		<div class="hdr" style="margin-top: 0px;">
+		<div class="hdr" style="margin-top: 52px;margin-bottom: 0px;">
 			<i class="fas fa-arrow-circle-right"></i>
-			<span style="letter-spacing: -1px;">
+			<span style="letter-spacing: -2px;padding-left: 20px;">
 				SOFTWARE
 			</span>
 			<div style="display: table-cell;vertical-align: middle;
@@ -305,24 +343,24 @@
 				<div style="height: 6px;width: 100%;background-color: red;"></div>
 			</div>
 		</div>
-<div>
+	<div style="padding-left: 8px;letter-spacing: 1px;">
 
-			<div style="float: left;">
+			<div style="float: left;width: 43%;">
 				<h2>PHOTOSHOP</h2>
-				<h2>=========</h2>
+				<h2 style="height: 22px;background-color: yellow;width: 90%"></h2>
 				<h2>ILLUSTRATOR</h2>
-				<h2>=========</h2>
+				<h2 style="height: 22px;background-color: yellow;width: 70%"></h2>
 				<h2>INDESIGN</h2>
-				<h2>=========</h2>
+				<h2 style="height: 22px;background-color: yellow;width: 55%"></h2>
 			</div>
 
-			<div>
+			<div style="float: left;width: 43%;margin-left: 10%;">
 				<h2>DREAMWEAVER</h2>
-				<h2>=========</h2>
+				<h2 style="height: 22px;background-color: green;width: 83%;"></h2>
 				<h2>AFTER EFFECTS</h2>
-				<h2>=========</h2>
+				<h2 style="height: 22px;background-color: green;width: 61%;"></h2>
 				<h2>HTML&CSS3</h2>
-				<h2>=========</h2>
+				<h2 style="height: 22px;background-color: green;width: 91%;"></h2>
 			</div>
 		</div>
 </div>
