Правая колонка в 0-ом приближении

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 		<div class="hdr" style="margin-top: 0px;">
 			<i class="fas fa-arrow-circle-right"></i>
-			<span style="letter-spacing: -1px;">
+			<span style="letter-spacing: -1px;padding-left: 20px;">
 				EDUCATION
 			</span>
 			<div style="display: table-cell;vertical-align: middle;
