Рейтинг в 1-ом приближении

--- a/index.html
+++ b/index.html
@@ -16,7 +16,37 @@
 
 
 <body>
-<div class="lft">
+<div id="Stars">
+<!-- Основная фишка селекторов:
+#Stars input:checked ~ label {
+background-position: 0 -40px; -->
+    <input id="star-4" type="radio" name="reviewStars"/>
+    <label title="gorgeous" for="star-4"></label>
+
+    <input id="star-3" type="radio" name="reviewStars"/>
+    <label title="good" for="star-3"></label>
+
+    <input id="star-2" type="radio" name="reviewStars"/>
+    <label title="regular" for="star-2"></label>
+
+    <input id="star-1" type="radio" name="reviewStars"/>
+    <label title="poor" for="star-1"></label>
+
+    <input id="star-0" type="radio" name="reviewStars"/>
+    <label title="bad" for="star-0"></label>
+</div>
+
+
+	<div class="productRate">
+		<div style="width: 64%"></div>
+	</div>
+
+	<div class="Rate"><!--<img src="./tmp/full-stars.png" alt="None">-->
+		<div style="width: 64%"></div>
+	</div>
+
+
+	<div class="lft">
 
 		<div class="circle">
 			<div class="incircle">
@@ -345,24 +375,25 @@
 		</div>
 	<div style="padding-left: 8px;letter-spacing: 1px;">
 
-			<div style="float: left;width: 43%;">
-				<h2>PHOTOSHOP</h2>
-				<h2 style="height: 22px;background-color: yellow;width: 90%"></h2>
-				<h2>ILLUSTRATOR</h2>
-				<h2 style="height: 22px;background-color: yellow;width: 70%"></h2>
-				<h2>INDESIGN</h2>
-				<h2 style="height: 22px;background-color: yellow;width: 55%"></h2>
-			</div>
-
-			<div style="float: left;width: 43%;margin-left: 10%;">
-				<h2>DREAMWEAVER</h2>
-				<h2 style="height: 22px;background-color: green;width: 83%;"></h2>
-				<h2>AFTER EFFECTS</h2>
-				<h2 style="height: 22px;background-color: green;width: 61%;"></h2>
-				<h2>HTML&CSS3</h2>
-				<h2 style="height: 22px;background-color: green;width: 91%;"></h2>
-			</div>
+		<div style="float: left;width: 43%;">
+			<h2>PHOTOSHOP</h2>
+			<h2 style="height: 22px;background-color: yellow;width: 90%"></h2>
+			<h2>ILLUSTRATOR</h2>
+			<h2 style="height: 22px;background-color: yellow;width: 70%"></h2>
+			<h2>INDESIGN</h2>
+			<h2 style="height: 22px;background-color: yellow;width: 55%"></h2>
 		</div>
+
+		<div style="float: left;width: 43%;margin-left: 10%;">
+			<h2>DREAMWEAVER</h2>
+			<h2 style="height: 22px;background-color: green;width: 83%;"></h2>
+			<h2>AFTER EFFECTS</h2>
+			<h2 style="height: 22px;background-color: green;width: 61%;"></h2>
+			<h2>HTML&CSS3</h2>
+			<h2 style="height: 22px;background-color: green;width: 91%;"></h2>
+		</div>
+	</div>
+
 </div>
 
 </body>
